# sfm_vc_ovc

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/d2xcp0/sfm_vc_ocv/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/d2xcp0/sfm_vc_ocv/: CalibrationStorage.kt  MainActivity.kt  PointCloudActivity.kt
app/src/main/java/com/d2xcp0/sfm_vc_ocv/screens/: DebugGalleryScreen.kt  FullscreenImage.kt  GalleryScreen.kt  MainScreen.kt
app/src/main/java/com/d2xcp0/sfm_vc_ocv/sfm/: AnchorMatcher.kt  CameraCalibrator.kt  DebugVisualizer.kt  FeatureExtractor.kt  FeatureMatcher.kt  MatchSet.kt  PointCloudExporter.kt  PointCloudGLSurfaceView.kt  PointCloudHolder.kt  PointCloudRenderer.kt  PoseEstimator.kt  PoseRefiner.kt  Triangulator.kt
app/src/main/java/com/d2xcp0/sfm_vc_ocv/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/d2xcp0/sfm_vc_ocv/utils/: StorageUtils.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/d2xcp0/sfm_vc_ocv/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
